--- a/style.css
+++ b/style.css
@@ -1,7 +1,32 @@
-.main{
-	color: green;
-	text-align: center;
-	width: 100%;
-	font-size: 30px;
-	font-family: monospace;
+#p1{
+	background-color: red;
+	height: 150px;
+	width: 150px;
+}
+#p2{
+	background-color: green;
+	width: 50px;
+	height:50px;
+}
+/********For large devices**********/
+@media (min-width: 1200px){
+	#p1{
+		width:80%;
+	}
+	#p2{
+		width: 150px;
+		height: 150px;
+	}
+}
+/*********medium devices**********/
+@media(min-width: 992px) and (max-width: 1199px){
+#p1{
+	width: 50%;
+}
+#p2{
+	width: 80px;
+	height: 80px;
+	background-color: orange;
+}
+
 }
