--- a/style.css
+++ b/style.css
@@ -1,32 +1,91 @@
-#p1{
-	background-color: red;
-	height: 150px;
-	width: 150px;
-}
-#p2{
-	background-color: green;
-	width: 50px;
-	height:50px;
-}
-/********For large devices**********/
-@media (min-width: 1200px){
-	#p1{
-		width:80%;
-	}
-	#p2{
-		width: 150px;
-		height: 150px;
-	}
-}
-/*********medium devices**********/
-@media(min-width: 992px) and (max-width: 1199px){
-#p1{
-	width: 50%;
-}
-#p2{
-	width: 80px;
-	height: 80px;
-	background-color: orange;
+/******base styles********/
+
+*{
+	box-sizing: border-box;
+	margin: 0;
+	padding: 0;
+	scrollbar-width: none;
 }
 
+::-webkit-scrollbar { display: none; }
+
+body{
+	font-family: monospace;
+
 }
+#mainTitle{
+	position:relative;
+	width: 100%;
+	align-items:center;
+	margin: 20px;
+}
+h1{
+	text-align: center;
+	font-size: 175%;
+}
+
+#container{
+	width:100%;
+}
+
+h2{
+	float: right;
+	text-align:center;
+	font-size:175%;
+	border: 1px solid black;
+	width: 150px;
+	margin-bottom: 5px;
+}
+p{
+	font-size: 125%;
+	width:90%;
+	margin-left: auto;
+	margin-right: auto;
+	height:150px;
+	overflow:auto;
+}
+
+@media(min-width: 992px){
+
+	.menu_b{
+		position:relative;
+		float:left;
+		width:33.33%;
+	}
+	#menu1, #menu2, #menu3{
+		border: 1px solid black;
+		margin-left: 15px;
+	}
+	#menu3{
+		margin-right:15px;
+	}
+
+}
+
+@media(min-width: 768px) and (max-width: 991px){
+	.menu_m1, .menu_m2{
+		position:relative;
+		float:left;
+		width:50%;
+	}
+	.menu_m3{
+		position: relative;
+		float: left;
+		width:100%;
+	}
+	#menu1, #menu2, #menu3{
+		border: 1px solid black;
+	}
+	#menu1{
+		margin-left: 15px;
+	}
+	#menu2{
+		margin: 0 15px 0 15px;
+	}
+	#menu3{
+		margin-right:15px;
+		margin: 15px;
+	}
+
+}
+
