--- a/style.css
+++ b/style.css
@@ -19,6 +19,7 @@ body{
 	align-items:center;
 	margin: 20px;
 }
+
 h1{
 	text-align: center;
 	font-size: 175%;
@@ -47,7 +48,7 @@ p{
 
 @media(min-width: 992px){
 
-	.menu_b{
+	.menu_c{
 		position:relative;
 		float:left;
 		width:33.33%;
@@ -89,3 +90,15 @@ p{
 
 }
 
+@media (max-width: 767px){
+	.menu_c{
+		width:100%;
+	}
+	#menu1,#menu2,#menu3{
+		width: 90%;
+		border: 1px solid black;
+		margin-left:auto;
+		margin-right:auto;
+		margin-bottom: 15px;
+	}
+}
