--- a/style.css
+++ b/style.css
@@ -14,20 +14,20 @@ html {
 
 body{
 	font-family: monospace;
-	font-size: 15px;
+	
 
 }
 #mainTitle{
 	position:relative;
-	width: 100%;
-	align-items:center;
+	width: 90%;
 	margin: 30px;
+	margin-left: auto;
+	margin-right: auto;
 }
 
 h1{
 	text-align: center;
 	font-size: 175%;
-	width:100%;
 }
 
 #container{
