--- a/css/styles.css
+++ b/css/styles.css
@@ -39,7 +39,7 @@ body{
   color: #222;
 }
 .container{
-  max-width: 1000px;
+  padding: 0 150px;
   margin: 0 auto;
 }
 .post-container:nth-child(even){
@@ -122,7 +122,7 @@ p{
   padding: 60px;
 }
 .container{
-  padding: 0 60px;
+  padding: 0 60px 0 60px;
 }
 
 }
