--- a/css/styles.css
+++ b/css/styles.css
@@ -124,7 +124,7 @@ p{
 .container{
   padding: 0 60px 0 60px;
 }
-#header-title{
-  font-size: 20px;
+#header-title, #header-nav{
+  font-size: 3vw;
 }
 }
